--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,2 +1,15 @@
 name: Test React App
-on: 
+on: push
+jobs: 
+    test_my_app:
+        runs-on: ubuntu-latest
+        steps: 
+            - name: Get the repository code
+              uses: actions/checkout@v3
+            - name: Install dependecies
+              run: npm ci
+            - name: Test application
+              run: npm run test
+
+
+        
