--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -10,26 +10,26 @@ jobs:
         run: npm ci
       - name: Test application
         run: npm run test
-    lint:
-      runs-on: ubuntu-latest
-      steps:
-      - name: Get repository code
-        uses: actions/checkout@v3
-      - name: Install dependencies
-        run: npm ci
-      - name: Lint application
-        run: npm run lint
-    build:
-      runs-on: ubuntu-latest
-      steps:
-      - name: Get repository code
-        uses: actions/checkout@v3
-      - name: Install dependencies
-        run: npm ci
-      - name: build application
-        run: npm run build
-      - name: Deploy
-        run: echo "Deploying okey"
+    # lint:
+    #   runs-on: ubuntu-latest
+    #   steps:
+    #   - name: Get repository code
+    #     uses: actions/checkout@v3
+    #   - name: Install dependencies
+    #     run: npm ci
+    #   - name: Lint application
+    #     run: npm run lint
+    # build:
+    #   runs-on: ubuntu-latest
+    #   steps:
+    #   - name: Get repository code
+    #     uses: actions/checkout@v3
+    #   - name: Install dependencies
+    #     run: npm ci
+    #   - name: build application
+    #     run: npm run build
+    #   - name: Deploy
+    #     run: echo "Deploying okey"
 
 
         
