--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,7 +1,7 @@
 name: Deploy React App
 on: push
 jobs: 
-    test_my_app:
+    test:
       runs-on: ubuntu-latest
       steps: 
       - name: Get the repository code
@@ -12,6 +12,7 @@ jobs:
         run: npm run test
     lint:
       runs-on: ubuntu-latest
+      needs: [test]
       steps:
       - name: Get repository code
         uses: actions/checkout@v3
@@ -21,6 +22,7 @@ jobs:
         run: npm run lint
     build:
       runs-on: ubuntu-latest
+      needs: [lint]
       steps:
       - name: Get repository code
         uses: actions/checkout@v3
