--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -5,4 +5,4 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: Print context
-              run: echo "${{ github.sha }}"
+              run: echo "${{ toJSON(github) }}"
