--- a/.github/workflows/deploy-steps2.yml
+++ b/.github/workflows/deploy-steps2.yml
@@ -3,6 +3,10 @@ on:
   push:
     branches:
       - master
+    
+    paths-ignore:
+        - '.github/workflows/*'
+
 jobs: 
     test:
       runs-on: ubuntu-latest
