--- a/.github/workflows/deploy-steps2.yml
+++ b/.github/workflows/deploy-steps2.yml
@@ -25,7 +25,6 @@ jobs:
 
     lint:
       runs-on: ubuntu-latest
-      needs: [test]
       steps:
       - name: Get the repository code
         uses: actions/checkout@v3
@@ -41,7 +40,7 @@ jobs:
 
     build:
       runs-on: ubuntu-latest
-      needs: [lint]
+      needs: [lint, test]
       steps: 
       - name: Get the repository code
         uses: actions/checkout@v3
