--- a/.github/workflows/deploy-steps2.yml
+++ b/.github/workflows/deploy-steps2.yml
@@ -43,25 +43,25 @@ jobs:
       needs: [lint, test]
       strategy:
         matrix:
-          node-version: [18]
+          node-version: [14, 16]
           os: [ubuntu-latest, windows-latest]
       runs-on: ${{ matrix.os }}
       steps: 
-      - name: Get the repository code
-        uses: actions/checkout@v3
-      - name: Install Node JS
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-      - name: Cache depen
-        uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: node-modules-${{ hashFiles('**/package-lock.json') }}
-      - name: Install dependecies
-        run: npm ci
-      - name: build application
-        run: npm run build
-      - name: Status Deploy application
-        run: echo "Deploying okey"
+        - name: Get the repository code
+          uses: actions/checkout@v3
+        - name: Install Node JS
+          uses: actions/setup-node@v3
+          with:
+            node-version: ${{ matrix.node-version }}
+        - name: Cache depen
+          uses: actions/cache@v3
+          with:
+            path: ~/.npm
+            key: node-modules-${{ hashFiles('**/package-lock.json') }}
+        - name: Install dependecies
+          run: npm ci
+        - name: build application
+          run: npm run build
+        - name: Status Deploy application
+          run: echo "Deploying okey"
     
