--- a/.github/workflows/deploy-steps2.yml
+++ b/.github/workflows/deploy-steps2.yml
@@ -41,9 +41,10 @@ jobs:
     build:
       
       needs: [lint, test]
+      continue-on-error: true
       strategy:
         matrix:
-          node-version: [14, 16]
+          node-version: [14, 16, 18]
           os: [ubuntu-latest, windows-latest]
       runs-on: ${{ matrix.os }}
       steps: 
