--- a/workflows-samples/deploy-steps.yml
+++ b/workflows-samples/deploy-steps.yml
@@ -1,19 +1,11 @@
-name: Deploy React App
-on: push
-jobs: 
-    deploy:
-      runs-on: ubuntu-latest
-      steps: 
-      - name: Get the repository code
-        uses: actions/checkout@v3
-      - name: Install dependecies
-        run: npm ci
-      - name: Test application
-        run: npm run test
-      - name: Lint application
-        run: npm run lint
-      - name: build application
-        run: npm run build
-      - name: Deploy
-        run: echo "Deploying okey"
-    
+name: Print Pull Request Context
+on: 
+    workflow_dispatch:
+    pull_request:
+        types: [opened, edited, reopened]
+jobs:
+    print:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Print context
+              run: echo "${{ toJSON(github.event) }}"
