--- a/workflows-samples/deploy-steps2.yml
+++ b/workflows-samples/deploy-steps2.yml
@@ -3,12 +3,21 @@ on:
   push:
     branches:
       - master
+    
+    # paths-ignore:
+    #     - '.github/workflows/*'
+
 jobs: 
     test:
       runs-on: ubuntu-latest
       steps: 
       - name: Get the repository code
         uses: actions/checkout@v3
+      - name: Cache depen
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependecies
         run: npm ci
       - name: Test application
@@ -17,23 +26,43 @@ jobs:
     lint:
       runs-on: ubuntu-latest
       steps:
-      needs: [test]
       - name: Get the repository code
         uses: actions/checkout@v3
+      - name: Cache depen
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependecies
         run: npm ci
       - name: lint application
         run: npm run lint
 
     build:
-      runs-on: ubuntu-latest
+      
+      needs: [lint, test]
+      continue-on-error: true
+      strategy:
+        matrix:
+          node-version: [14, 16, 18]
+          os: [ubuntu-latest, windows-latest]
+      runs-on: ${{ matrix.os }}
       steps: 
-      needs: [lint]
-      - name: Get the repository code
-        uses: actions/checkout@v3
-      - name: Install dependecies
-        run: npm ci
-      - name: build application
-        run: npm run build
-        run: echo "Deploying okey"
+        - name: Get the repository code
+          uses: actions/checkout@v3
+        - name: Install Node JS
+          uses: actions/setup-node@v3
+          with:
+            node-version: ${{ matrix.node-version }}
+        - name: Cache depen
+          uses: actions/cache@v3
+          with:
+            path: ~/.npm
+            key: node-modules-${{ hashFiles('**/package-lock.json') }}
+        - name: Install dependecies
+          run: npm ci
+        - name: build application
+          run: npm run build
+        - name: Status Deploy application
+          run: echo "Deploying okey"
     
