--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
 name: build
 on: [push, workflow_dispatch]
 jobs:
-  build:
+  builds:
     runs-on: ubuntu-latest
     steps:
       - name: Get code repo
