--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -16,10 +16,10 @@ jobs:
                 echo "${{ env.NODE_ENV }}"
                 echo "${{ env.GH_SECRET }}"
 
-    build:
+    deploy:
         runs-on: ubuntu-latets
         steps:
             - name: Print Env Deploy
-            run: |
+              run: |
                 echo "${{ env.NODE_ENV }}"
                 echo "${{ env.GH_SECRET }}"
