--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -3,21 +3,22 @@ on: push
 
 env:
     NODE_ENV: production
-    GH_SECRET: 42
+    GH_SECRET: ${{ secrets.TEST_SECRET }}
 
 jobs:
     build:
         runs-on: ubuntu-latets
         steps:
-            - name: Print Env Build
-              run: |
-                echo "${{ env.NODE_ENV }}"
-                echo "${{ env.GH_SECRET }}"
-
+        - name: Print Env Build
+          run: |
+            echo "${{ env.NODE_ENV }}"
+            echo "${{ env.GH_SECRET }}"
     deploy:
         runs-on: ubuntu-latets
+        env:
+          NODE_ENV: production-deploy
         steps:
-            - name: Print Env Deploy
-              run: |
-                echo "${{ env.NODE_ENV }}"
-                echo "${{ env.GH_SECRET }}"
+        - name: Print Env Deploy
+          run: |
+            echo "${{ env.NODE_ENV }}"
+            echo "${{ env.GH_SECRET }}"
